static/branding/irf-course.css
body > header nav.presentation > ul > li:first-child {
    margin-left: calc(var(--logo-width) + 1em);
}

body.presentation {
    background-color: var(--r-background-color)!important;
}

.course-tabs {
  border: 1px solid var(--fg-color);
  border-radius: 0.5rem;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
}

.course-tabs > input[type="radio"] {
  appearance: none;
  border: 0;
  outline: 0;
  margin: 0;
}

.course-tabs > input[type="radio"]:checked + label {
    border-bottom: 1px solid var(--color-link);
}
.course-tabs > input[type="radio"]:checked + label + .course-tab {
    display: block;
}

.course-tabs > label {
    display: inline-block;
    padding: 0.5rem 1rem;
    border-bottom: 1px transparent;
    cursor: pointer;
}

.course-tabs > label:hover {
    background-color: var(--bg-alt-color);
}
.course-tabs > input[type="radio"]:checked + label {
    background-color: var(--bg-alt-color);
    font-weight: bold;
}

.course-tab {
    order: 999;
    width: 100%;
    border-top: 1px solid var(--fg-color);
    padding: 1rem;
    display: none;
}

.course-lecture-notice {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 3em;
    border: 1px solid var(--fg-color);
    border-radius: 0.5rem;
    background-color: var(--bg-note);
}
.course-lecture-notice > a {
    margin: 0em 1em;
}
.course-lecture-notice > p {
    margin: 0em 1em;
}

.course-page-listing > dt {
    font-family: monospace, monospace;
    font-weight: normal;
}
.course-page-listing > dd {
    margin-bottom: 1em;
}

.highlight > div:first-child {
    background: none!important;
}

.course-columns {
    display: flex;
    width: 100%;
    height: auto;
    flex-direction: row;
}

img.expandable {
    transition: transform 0.2s;
}

img.expandable:hover {
    transform: scale(1.05);
}

.zoom {
    display: none; /* Hidden by default */
    position: fixed;
    z-index: 1000; /* On top of other content */
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
}

.zoom img {
    max-width: 90%;
    max-height: 90%;
    border-radius: 8px;
}

.zoom .close {
    position: absolute;
    top: 20px;
    right: 40px;
    font-size: 30px;
    color: white;
    cursor: pointer;
}

